--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     "require": {
         "php": "^7.2.5",
         "barryvdh/laravel-dompdf": "^0.8.6",
-        "consoletvs/charts": "6.*",
+        "consoletvs/charts": "^7.3",
         "fideloper/proxy": "^4.2",
-		"fruitcake/laravel-cors": "^1.0",
-		"guzzlehttp/guzzle": "^6.3",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
